[refactor] Clean, Readable 코드 #54 (#67)
* refactor : 검증 메서드를 호출할 때는 논리 부정 연산자 !를 사용하지 않도록 변경 (#54)

* refactor : 검증메서드 내부에서는 조건문에 논리기호 사용 (#54)

* refactor : 비어있거나, 원소가 하나인 Set의 생성에 Collections 활용 (#54)

* refactor : 비어있는 컬렉션은 Collections를, 원소가 한개인 컬렉션은 List, Set의 of를 사용 (#54)

* refactor : Stream으로 표현 가능한 for문 변경 (#54)

* refactor : Arrays.asList를 List.of로 변경 (#54)

* refactor : Header와 시간, Http Method 표현에 Java와 Spring이 제공해주는 상수를 적용해 가독성 개선 (#54)

* refactor : 서울 Zone 지정 LocalDateTime을 가진 SeoulDateTime 구현하고, LocalDateTime 사용처에 적용 (#54)

* test : Fixture의 이름을 좀 더 분명하게 변경 (#54)

* refactor : fixture와 fake 객체 패키지 변경 (#54)

* chore : gradle 파일에서 주석 제거 (#54)

* refactor : 불필요한 의존성 제거 (#54)

* refactor : 얼리 리턴이 가능한 경우 적용 (#54)

* refactor : Method Reference로 변경 가능한 람다 변경 (#54)

* refactor : 원소가 1개이며 변할 일 없는 컬렉션을 Collections.singletone 으로 표현 (#54)

* chore : AuthService에서 제거한 의존성을 TestContainer에도 적용 (#54)